--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,13 @@
 @tailwind utilities;
 
 
+#content::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  #content {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
