--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,14 @@
     scrollbar-width: none;  /* Firefox */
   }
   
+  #groups::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  #groups {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+  
+  
